--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
