--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --open",
     "build": "webpack"
   },
   "keywords": [],
@@ -14,7 +15,8 @@
     "css-loader": "^5.2.6",
     "style-loader": "^2.0.0",
     "webpack": "^5.39.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "file-loader": "^6.2.0",
